--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,4 +40,4 @@ jobs:
           protocol: ftp
           port: 21
           local-dir: dist
-          server-dir: /public_html
+          server-dir: /admin_varnarc
