--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-
+    environment: "cpanel ftp secrets"
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
